--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
                     <!-- Image handled by CSS background instead of img element -->
                 </div>
                 <div class="about-content">
-                    <h2>About Base Fit Studio</h2>
-                    <p>At Base Fit Studio, we believe in creating a holistic approach to health and wellness. Our state-of-the-art facility is designed to help you achieve your fitness goals in a supportive and energizing environment.</p>
-                    <p>We offer a wide range of equipment, personalized training programs, and expert guidance from certified fitness professionals who are dedicated to your success.</p>
+                    <h2>About WellnessWave</h2>
+                    <p>At WellnessWave, we believe healthy living is about joy, balance, and feeling your best—no extremes, no guilt. Founded by fitness enthusiasts and nutrition experts, we are here to simplify wellness for everyone.</p>
+                    <p>Whether you are whipping up a 10-minute meal, sweating it out in your living room, or seeking science-backed tips, we will got your back. Join our community and lets thrive together!</p>
                     <button class="btn">Learn More</button>
                 </div>
             </div>
@@ -71,6 +71,40 @@
                     <button class="btn">Explore Recipes</button>
                 </div>
                 <div class="food-image">
+                    <!-- Image handled by CSS background instead of img element -->
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Gym Section -->
+    <section class="gym-section">
+        <div class="container">
+            <div class="gym-grid">
+                <div class="gym-image">
+                    <!-- Image handled by CSS background instead of img element -->
+                </div>
+                <div class="gym-content">
+                    <h2>Home Gym Routine</h2>
+                    <p>Your home is your sanctuary—and your gym. No expensive equipment? No problem. Our routines are designed for real life, using bodyweight, household items, or minimal gear.</p>
+                    <p>From high-energy HIIT to calming yoga flows, we will help you build strength, flexibility, and confidence. Progress > perfection. Press play, grab your water bottle, and lets make every rep count.</p>
+                    <button class="btn">View Facilities</button>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Tips Section -->
+    <section class="tips-section">
+        <div class="container">
+            <div class="tips-grid">
+                <div class="tips-content">
+                    <h2>Wellness Tips & Advice</h2>
+                    <p>Small changes lead to big results. Our expert-backed wellness tips fit into your real life, helping you feel better every day without overwhelming changes.</p>
+                    <p>From stress management and better sleep to hydration hacks and mindfulness practices, our science-based advice helps you build sustainable habits that stick for the long run.</p>
+                    <button class="btn">Read Our Tips</button>
+                </div>
+                <div class="tips-image">
                     <!-- Image handled by CSS background instead of img element -->
                 </div>
             </div>
