--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 <body>
     <!-- Navigation Bar -->
     <nav class="navbar">
-        <img src="logo.png" alt="WellnessWave Logo" class="logo">
+        <a href="index.html">
+            <img src="logo.png" alt="WellnessWave Logo" class="logo">
+        </a>
         
         <ul class="nav-menu">
             <li><a href="#">Home</a></li>
@@ -28,14 +30,14 @@
         </ul>
         
         <div class="nav-buttons">
-            <button class="btn btn-primary">Sign Up</button>
+            <a href="login.html" class="btn btn-primary">Login In</a>
         </div>
     </nav>
 
     <!-- Side Button (Join Today) -->
-    <div class="side-button">
+    <a href="login.html" class="side-button">
         Join Today
-    </div>
+    </a>
 
     <!-- Hero Section -->
     <section class="hero">
@@ -118,7 +120,7 @@
     <!-- Newsletter Section -->
     <section class="newsletter-section">
         <div class="container">
-            <h2>Subscribe to Our Newsletter</h2>
+            <h2>Subscribe to Our Website</h2>
             <p>Get the latest health and fitness news and exclusive offers</p>
             <div class="newsletter-form">
                 <input type="email" placeholder="Enter your email address" aria-label="Email address">
