--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- Navigation Bar -->
     <nav class="navbar">
         <a href="index.html">
-            <img src="logo.png" alt="WellnessWave Logo" class="logo">
+            <img src="Media/logo.png" alt="WellnessWave Logo" class="logo">
         </a>
         
         <ul class="nav-menu">
@@ -46,7 +46,7 @@
             <p>Discover Recipes, Fitness Plans & Expert Tips</p>
             <button class="btn btn-primary hero-btn">Start Your Journey</button>
         </div>
-        <img src="arrow-circle-down.png" alt="Scroll down arrow" id="scroll-down-arrow">
+        <img src="Media/arrow-circle-down.png" alt="Scroll down arrow" id="scroll-down-arrow">
     </section>
 
     <!-- About Section -->
@@ -54,7 +54,7 @@
         <div class="container">
             <div class="about-grid">
                 <div class="about-image image-parallax-container">
-                    <img src="Picture 2.jpg" alt="Person meditating">
+                    <img src="Media/Picture 2.jpg" alt="Person meditating">
                 </div>
                 <div class="about-content">
                     <h2>About Base Fit Studio</h2>
@@ -77,7 +77,7 @@
                     <button class="btn">Explore Recipes</button>
                 </div>
                 <div class="food-image image-parallax-container">
-                    <img src="Picture 3.jpg" alt="Healthy food bowl">
+                    <img src="Media/Picture 3.jpg" alt="Healthy food bowl">
                 </div>
             </div>
         </div>
@@ -88,7 +88,7 @@
         <div class="container">
             <div class="gym-grid">
                 <div class="gym-image image-parallax-container">
-                    <img src="Picture 4.jpg" alt="Gym interior">
+                    <img src="Media/Picture 4.jpg" alt="Gym interior">
                 </div>
                 <div class="gym-content">
                     <h2>Our Professional Gym</h2>
@@ -111,7 +111,7 @@
                     <button class="btn">View Tips</button>
                 </div>
                 <div class="tips-image image-parallax-container">
-                    <img src="Picture 5.jpg" alt="Person stretching">
+                    <img src="Media/Picture 5.jpg" alt="Person stretching">
                 </div>
             </div>
         </div>
