--- a/login.html
+++ b/login.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <a href="index.html" class="login-logo-link">
-        <img src="logo.png" alt="WellnessWave Logo" class="login-logo">
+        <img src="Media/logo.png" alt="WellnessWave Logo" class="login-logo">
     </a>
     
     <div class="login-container">
@@ -62,7 +62,7 @@
         
         <!-- Image Side -->
         <div class="login-image-container">
-            <img src="Login 1.png" alt="Person with headphones" class="person-image">
+            <img src="Media/Login 1.png" alt="Person with headphones" class="person-image">
         </div>
     </div>
 
