--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
         </a>
         
         <ul class="nav-menu">
-            <li><a href="#">Home</a></li>
+            <li><a href="#" class="active">Home</a></li>
             <li><a href="#">Health Tips</a></li>
-            <li><a href="#">Recipes</a></li>
+            <li><a href="meal-planner.html">Recipes</a></li>
             <li><a href="#">Fitness</a></li>
             <li><a href="#">Blog</a></li>
             <li><a href="#">About</a></li>
@@ -74,7 +74,7 @@
                     <h2>Nutrition & Meal Plans</h2>
                     <p>Nutrition is a crucial component of your wellness journey. Our expert nutritionists create personalized meal plans that complement your fitness routine and help you achieve optimal results.</p>
                     <p>Discover delicious, nutrient-rich recipes that fuel your body and satisfy your taste buds. We focus on sustainable eating habits that you can maintain for life.</p>
-                    <button class="btn">Explore Recipes</button>
+                    <a href="meal-planner.html" class="btn">Explore Recipes</a>
                 </div>
                 <div class="food-image image-parallax-container">
                     <img src="Media/Picture 3.jpg" alt="Healthy food bowl">
