--- a/meal-planner.html
+++ b/meal-planner.html
@@ -9,6 +9,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/meal-planner.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
+    <!-- Add: Bootstrap Icons CDN -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <!-- GSAP for animations -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
@@ -54,6 +56,12 @@
     </section>
 
     <div id="main-container" class="main-container">
+
+        <!-- Add: "More" Indicator -->
+        <div id="moreIndicator" class="more-indicator">
+            <span>More</span>
+            <i class="bi bi-chevron-double-down"></i>
+        </div>
 
         <section class="filter-section">
             <div class="filter-header">
@@ -167,6 +175,12 @@
             </div>
         </div>
     </footer>
+
+    <!-- Add: Scroll to Top Button -->
+    <button id="scrollToTopBtn" class="scroll-to-top-btn" title="Go to top" aria-label="Scroll back to top">
+        <span>Go back Top</span>
+        <i class="bi bi-arrow-up-circle-fill"></i>
+    </button>
 
     <!-- Existing scripts -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
