--- a/meal-planner.html
+++ b/meal-planner.html
@@ -11,6 +11,8 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <!-- Add: Bootstrap Icons CDN -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <!-- jQuery -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <!-- GSAP for animations -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
@@ -33,7 +35,8 @@
         </ul>
         
         <div class="nav-buttons">
-            <a href="login.html" class="btn btn-primary">Login In</a>
+            <a href="login.html" class="btn btn-primary login-link">Login In</a>
+            <a href="#" class="btn btn-secondary logout-btn show-when-logged-in">Logout</a>
         </div>
     </nav>
 
@@ -182,11 +185,9 @@
         <i class="bi bi-arrow-up-circle-fill"></i>
     </button>
 
-    <!-- Existing scripts -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
+    <!-- Scripts -->
     <script src="js/meal-planner.js"></script>
-    <script src="js/meal-planner-hero.js"></script>
+    <script src="js/auth-ui.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html> 
