--- a/meal-planner.html
+++ b/meal-planner.html
@@ -35,7 +35,7 @@
         </ul>
         
         <div class="nav-buttons">
-            <a href="login.html" class="btn btn-primary login-link">Login In</a>
+            <a href="login.html" class="btn btn-primary login-link hide-when-logged-in">Login In</a>
             <a href="#" class="btn btn-secondary logout-btn show-when-logged-in">Logout</a>
         </div>
     </nav>
@@ -188,6 +188,7 @@
     <!-- Scripts -->
     <script src="js/meal-planner.js"></script>
     <script src="js/auth-ui.js"></script>
+    <script src="js/meal-planner-hero.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html> 
