--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
         </ul>
         
         <div class="nav-buttons">
-            <a href="login.html" class="btn btn-primary login-link">Login In</a>
+            <a href="login.html" class="btn btn-primary login-link hide-when-logged-in">Login In</a>
             <a href="#" class="btn btn-secondary logout-btn show-when-logged-in">Logout</a>
         </div>
     </nav>
 
     <!-- Side Button (Join Today) -->
-    <a href="login.html" class="side-button side-nav-disabled-when-logged-in">
+    <a href="login.html" class="side-button side-nav-disabled-when-logged-in hide-when-logged-in">
         Join Today
     </a>
 
