--- a/meal-planner.html
+++ b/meal-planner.html
@@ -26,7 +26,7 @@
         
         <ul class="nav-menu">
             <li><a href="index.html">Home</a></li>
-            <li><a href="#">Health Tips</a></li>
+            <li><a href="tips.html">Health Tips</a></li>
             <li><a href="meal-planner.html" class="active">Recipes</a></li>
             <li><a href="#">Fitness</a></li>
             <li><a href="#">Blog</a></li>
