--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         </a>
         
         <ul class="nav-menu">
-            <li><a href="#" class="active">Home</a></li>
-            <li><a href="#">Health Tips</a></li>
+            <li><a href="index.html" class="active">Home</a></li>
+            <li><a href="tips.html">Health Tips</a></li>
             <li><a href="meal-planner.html">Recipes</a></li>
             <li><a href="#">Fitness</a></li>
             <li><a href="#">Blog</a></li>
