--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <li><a href="index.html" class="active">Home</a></li>
             <li><a href="tips.html">Health Tips</a></li>
             <li><a href="meal-planner.html">Recipes</a></li>
-            <li><a href="#">Fitness</a></li>
+            <li><a href="fitness.html">Fitness</a></li>
             <li><a href="#">Blog</a></li>
             <li><a href="#">About</a></li>
             <li><a href="#">Contact</a></li>
@@ -96,7 +96,7 @@
                     <h2>Our Professional Gym</h2>
                     <p>Experience our state-of-the-art gym facilities equipped with the latest fitness technology and equipment. Our gym is designed to cater to all fitness levels, from beginners to advanced athletes.</p>
                     <p>Our certified trainers are available to guide you through personalized workout programs that align with your specific goals and needs. Join us and transform your fitness journey today.</p>
-                    <button class="btn">Join Now</button>
+                    <a href="fitness.html" class="btn">Join Now</a>
                 </div>
             </div>
         </div>
@@ -110,7 +110,7 @@
                     <h2>Health & Wellness Tips</h2>
                     <p>Discover expert tips and advice to enhance your wellness journey. Our team of health professionals shares valuable insights on maintaining a balanced lifestyle, improving fitness performance, and achieving your health goals.</p>
                     <p>From workout techniques to stress management strategies, we provide practical advice that you can incorporate into your daily routine for lasting results.</p>
-                    <button class="btn">View Tips</button>
+                    <a href="tips.html" class="btn">View Tips</a>
                 </div>
                 <div class="tips-image image-parallax-container">
                     <img src="Media/Picture 5.jpg" alt="Person stretching">
