--- a/tips.html
+++ b/tips.html
@@ -26,7 +26,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="tips.html" class="active">Health Tips</a></li>
             <li><a href="meal-planner.html">Recipes</a></li>
-            <li><a href="#">Fitness</a></li>
+            <li><a href="fitness.html">Fitness</a></li>
             <li><a href="#">Blog</a></li>
             <li><a href="#">About</a></li>
             <li><a href="#">Contact</a></li>
