--- a/contact.html
+++ b/contact.html
@@ -14,8 +14,15 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js" integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js" integrity="sha512-onMTRKJBKz8M1TnqqDuGBlowlH0ohFzMXYRNebz+yOcc5TQr/zAKsthzhuv0hiyUKEiQEQXEynnXCvNTOk50dg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+    <!-- Inline script for initializing body class -->
+    <script>
+        // Set contact-page class immediately to avoid layout shifts
+        document.documentElement.className += ' contact-page-html';
+        document.body.className += ' contact-page';
+    </script>
 </head>
-<body>
+<body class="contact-page">
     <!-- Navigation Bar -->
     <nav class="navbar">
         <a href="index.html">
