--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     <p>At WellnessWave, we're passionate about empowering your journey to a healthier, balanced life. More than just a gym, we're your all-in-one wellness partner—offering nutritious meal plans, personalized fitness programs, and everyday health tips designed to support your mind and body.</p>
                     <p>Whether you're looking to fuel your body with clean eating, follow a customized workout plan, or simply stay motivated with expert advice, our goal is to make wellness simple, sustainable, and tailored to you.<p>
                     <p>Join the wave—your wellness journey starts here.</p>
-                    <button class="btn">Learn More</button>
+                    <a href="about.html" class="btn">Learn More</a>
                 </div>
             </div>
         </div>
