--- a/tips.html
+++ b/tips.html
@@ -34,7 +34,7 @@
         
         <div class="nav-buttons">
             <a href="login.html" class="btn btn-primary login-link hide-when-logged-in">Login In</a>
-            <a href="#" class="btn btn-secondary logout-btn hidden">Logout</a>
+            <a href="#" class="btn btn-secondary logout-btn show-when-logged-in hidden">Logout</a>
         </div>
     </nav>
 
