--- a/fitness.html
+++ b/fitness.html
@@ -53,7 +53,7 @@
     </section>
 
     <!-- Content Section with Frosted Glass Design -->
-    <section class="fitness-main">
+    <section class="fitness-main" id="main-content-start">
         <!-- Decorative background circles -->
         <div class="bg-circle circle-1"></div>
         <div class="bg-circle circle-2"></div>
