--- a/meal-planner.html
+++ b/meal-planner.html
@@ -58,7 +58,7 @@
         <img src="Media/arrow-circle-down.png" alt="Scroll down arrow" id="scroll-down-arrow" style="z-index: 10;">
     </section>
 
-    <div id="main-container" class="main-container">
+    <div id="main-container" class="main-container" id="main-content-start">
 
         <!-- Add: "More" Indicator -->
         <div id="moreIndicator" class="more-indicator">
