--- a/tips.html
+++ b/tips.html
@@ -53,7 +53,7 @@
     </section>
 
     <!-- Tips Main Content -->
-    <section class="tips-main">
+    <section class="tips-main" id="main-content-start">
         <!-- Reposition the glass circles layer to ensure proper stacking context -->
         <div class="circle-base-layer">
             <!-- Glass circles with improved visibility and layering -->
