--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     </section>
 
     <!-- About Section -->
-    <section class="about-section">
+    <section class="about-section" id="main-content-start">
         <div class="container">
             <div class="about-grid">
                 <div class="about-image image-parallax-container">
